syntax = "proto3";

package grpcPB;

message IstRctRequest {
	string 	UserAddr 	= 	1;
	int64 	ReceiptId	= 	2;
	int64 	TotalQty	= 	3;
}

message IstFundsRequest {
	string 	UserAddr 	=	1;
	int64 	TotalFunds	=	2;
}

message TradeReq{
	int64 	ReceiptId 	=	1;
	int64   Price 		=  	2;
	int64 	QtySell 	=	3;
	int64   NonceSell	= 	4;
	string 	SigSell     =   5;
	string  AddrSell   	=	6;
}

message Reply {
	int64 	RstCode 	= 	1;
	string 	RstDetails	= 	2;
}

service RPCService {
	rpc InsertUserReceipt(IstRctRequest) returns (Reply) {}
	rpc InsertUserFunds(IstFundsRequest) returns (Reply){}
	rpc Trade(TradeReq) returns (Reply) {}
}

